--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   ],
   "dependencies": {
     "chunking-streams": "0.0.7-b1",
+    "coveralls": "^2.11.2",
     "fs": "0.0.2",
     "grunt-jsdoc": "^0.5.8",
     "lodash": "^3.6.0",
     "meow": "^2.0.0",
+    "mocha-lcov-reporter": "0.0.2",
     "moment": "^2.9.0",
     "progress": "^1.1.8",
     "request": "^2.54.0",
