--- a/package.json
+++ b/package.json
@@ -38,10 +38,18 @@
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-nodeunit": "^0.4.1",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-gh-pages": "^0.10.0",
     "grunt-jsdoc-to-markdown": "^0.4.3",
+    "grunt-karma": "^0.10.1",
     "grunt-mocha-cli": "^1.11.0",
+    "jasmine-core": "^2.2.0",
     "jshint-stylish": "^1.0.0",
+    "karma": "^0.12.31",
+    "karma-jasmine": "^0.3.5",
+    "karma-mocha": "^0.1.10",
+    "karma-phantomjs-launcher": "^0.1.4",
     "load-grunt-tasks": "^1.0.0",
+    "mocha": "^2.2.4",
     "time-grunt": "^1.0.0"
   },
   "scripts": {
