--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "grunt-jsdoc-to-markdown": "^0.4.3",
     "grunt-karma": "^0.10.1",
     "grunt-mocha-cli": "^1.11.0",
+    "istanbul": "^0.3.13",
     "jasmine-core": "^2.2.0",
+    "jshint": "^2.7.0",
     "jshint-stylish": "^1.0.0",
     "karma": "^0.12.31",
     "karma-jasmine": "^0.3.5",
